2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-drive.c: (gnome_vfs_drive_finalize),
	(gnome_vfs_drive_compare):
	* libgnomevfs/gnome-vfs-hal-mounts.c:
	(_hal_add_drive_without_volumes), (_hal_add_volume),
	* libgnomevfs/gnome-vfs-volume.c: (gnome_vfs_volume_finalize),
	(gnome_vfs_volume_compare), (_gnome_vfs_volume_from_corba):
	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c:
	(create_drive_from_mount_point), (create_vol_from_mount),
	(connected_server_compare), (get_connected_servers),
	(create_volume_from_connected_server):
	* libgnomevfs/gnome-vfs-volume-monitor-private.h:
	Create collation keys for volume and drive display names, and
	strcmp the keys instead of the names. Fixes #321320.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-directory.c: (directory_visit_internal):
	Return GNOME_VFS_ERROR_INTERRUPTED when callback returns 0.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* modules/ftp-method.c: (query_user_for_authn_info),
	(ftp_connection_create):
	Handle anonymous login failure, add query_user_for_authn_info
	documentation. Fixes #336619.

2006-04-25  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-volume-ops.c: (mount_unmount_thread):
	Don't strcmp NULL when ejecting. Partly fixes #337014.

2006-04-21  Christian Neumair  <chris@gnome-de.org>

	* modules/smb-method.c: (string_nzero), (find_cached_server):
	Treat "" as NULL for SmbServerCacheEntry cache lookups.
	Should fix mass connection establishment.

2006-04-21  Martyn Russell  <martyn@imendio.com>

	* libgnomevfs/gnome-vfs-result.c: Removed duplicate
	GNOEM_VFS_ERROR_TIMEOUT string, fixes bug #335250.
	
2006-04-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-vfs 2.14.1 ===
	
2006-04-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO